Add UNIMARC authority analyzer + Refactoring