@@ -17,7 +17,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.logging.Logger;
-import java.util.logging.Logger;
 
 public class PicaRecord extends BibliographicRecord {
   protected static final List<String> PICA_SUBJECT_TAGS = Arrays.asList("045A", "045B", "045F", "045R");
@@ -26,15 +25,6 @@ public class PicaRecord extends BibliographicRecord {
     PicaRecord.class.getCanonicalName()
   );
 
-  private static List<String> authorityTags;
-  private static Map<String, Boolean> authorityTagsIndex;
-  private static Map<String, Boolean> subjectTagIndex;
-  private static Map<String, Map<String, Boolean>> skippableAuthoritySubfields;
-  private static Map<String, Map<String, Boolean>> skippableSubjectSubfields;
-  /**
-   * Key-value pairs of AuthorityCategory and tags
-   */
-  private static Map<AuthorityCategory, List<String>> authorityTagsMap;
   private static Map<ShelfReadyFieldsBooks, Map<String, List<String>>> shelfReadyMap;
 
   public PicaRecord() {
@@ -51,57 +41,9 @@ public class PicaRecord extends BibliographicRecord {
     schemaType = SchemaType.PICA;
   }
 
-  public List<DataField> getAuthorityFields() {
-    if (authorityTags == null) {
-      initializeAuthorityTags();
-    }
-    return getFieldsFromTags(authorityTags);
-  }
-
   @Override
   public List<String> getAllowedControlFieldTags() {
     return List.of();
-  }
-
-  public boolean isAuthorityTag(String tag) {
-    if (authorityTagsIndex == null) {
-      initializeAuthorityTags();
-    }
-    return authorityTagsIndex.getOrDefault(tag, false);
-  }
-
-  public boolean isSkippableAuthoritySubfield(String tag, String code) {
-    if (authorityTagsIndex == null)
-      initializeAuthorityTags();
-
-    if (!skippableAuthoritySubfields.containsKey(tag))
-      return false;
-
-    return skippableAuthoritySubfields.get(tag).getOrDefault(code, false);
-  }
-
-  public boolean isSubjectTag(String tag) {
-    if (subjectTagIndex == null) {
-      initializeAuthorityTags();
-    }
-    return subjectTagIndex.getOrDefault(tag, false);
-  }
-
-  public boolean isSkippableSubjectSubfield(String tag, String code) {
-    if (subjectTagIndex == null)
-      initializeAuthorityTags();
-
-    if (!skippableSubjectSubfields.containsKey(tag))
-      return false;
-
-    return skippableSubjectSubfields.get(tag).getOrDefault(code, false);
-  }
-
-  public Map<DataField, AuthorityCategory> getAuthorityFieldsMap() {
-    if (authorityTags == null)
-      initializeAuthorityTags();
-
-    return getAuthorityFields(authorityTagsMap);
   }
 
   public Map<ShelfReadyFieldsBooks, Map<String, List<String>>> getShelfReadyMap() {
@@ -115,8 +57,7 @@ public class PicaRecord extends BibliographicRecord {
     return PICA_SUBJECT_TAGS;
   }
 
-
-  private static void initializeAuthorityTags() {
+  protected void initializeAuthorityTags() {
     authorityTags = Arrays.asList(
       "022A/00", // Werktitel und sonstige unterscheidende Merkmale des Werks
       "022A/01", // Weiterer Werktitel und sonstige unterscheidende Merkmale
@@ -165,17 +106,17 @@ public class PicaRecord extends BibliographicRecord {
     subjectTagIndex = Utils.listToMap(subjectTags);
 
     skippableSubjectSubfields = new HashMap<>();
-    skippableSubjectSubfields.put("022A/00", Utils.listToMap(Arrays.asList("9", "V", "7", "3", "w")));
-    skippableSubjectSubfields.put("022A/01", Utils.listToMap(Arrays.asList("9", "V", "7", "3", "w")));
-    skippableSubjectSubfields.put("044H", Utils.listToMap(Arrays.asList("A"))); // A = Quelle
-    skippableSubjectSubfields.put("044S", Utils.listToMap(Arrays.asList("9", "A", "V", "7", "3", "w")));
-    skippableSubjectSubfields.put("045F", Utils.listToMap(Arrays.asList("A")));
-    skippableSubjectSubfields.put("045G", Utils.listToMap(Arrays.asList("A")));
-    skippableSubjectSubfields.put("045X", Utils.listToMap(Arrays.asList("A")));
-    skippableSubjectSubfields.put("045Y", Utils.listToMap(Arrays.asList("A")));
-    skippableSubjectSubfields.put("045N", Utils.listToMap(Arrays.asList("9", "V", "7", "3", "w")));
-    skippableSubjectSubfields.put("045R", Utils.listToMap(Arrays.asList("9", "V", "7", "3", "w")));
-    skippableSubjectSubfields.put("045T", Utils.listToMap(Arrays.asList("9", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("022A/00", Utils.listToMap(List.of("9", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("022A/01", Utils.listToMap(List.of("9", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("044H", Utils.listToMap(List.of("A"))); // A = Quelle
+    skippableSubjectSubfields.put("044S", Utils.listToMap(List.of("9", "A", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("045F", Utils.listToMap(List.of("A")));
+    skippableSubjectSubfields.put("045G", Utils.listToMap(List.of("A")));
+    skippableSubjectSubfields.put("045X", Utils.listToMap(List.of("A")));
+    skippableSubjectSubfields.put("045Y", Utils.listToMap(List.of("A")));
+    skippableSubjectSubfields.put("045N", Utils.listToMap(List.of("9", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("045R", Utils.listToMap(List.of("9", "V", "7", "3", "w")));
+    skippableSubjectSubfields.put("045T", Utils.listToMap(List.of("9", "V", "7", "3", "w")));
 
     authorityTagsMap = new EnumMap<>(AuthorityCategory.class);
     authorityTagsMap.put(AuthorityCategory.TITLES, List.of("022A/00", "022A/01"));
@@ -202,11 +143,12 @@ public class PicaRecord extends BibliographicRecord {
     }
   }
 
+  @Override
   protected void indexField(DataField dataField) {
 
     String tag = dataField.getTagWithOccurrence();
     if (tag == null)
-      logger.warning("null tag in indexField() " + dataField);
+      logger.warning(() -> "null tag in indexField() " + dataField);
 
     datafieldIndex.computeIfAbsent(tag, s -> new ArrayList<>());
     datafieldIndex.get(tag).add(dataField);
